<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_menu_settings" />
        <item
            android:id="@+id/nav_view_logs"
            android:icon="@android:drawable/ic_menu_view"
            android:title="View Logs" />
        <item
            android:id="@+id/nav_prompts"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Prompts" />
        <item
            android:id="@+id/nav_macros"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Macros" />
        <item
            android:id="@+id/nav_formatting_tags"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/formatting_tags_activity_title" />
    </group>
</menu>