<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/prompt_label_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        tools:text="@string/untitled_prompt_label" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/prompt_active_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageButton
        android:id="@+id/prompt_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_edit_prompt"
        android:padding="4dp"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/prompt_copy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Copy Prompt"
        android:padding="4dp"
        app:srcCompat="@android:drawable/ic_menu_set_as" />

    <ImageButton
        android:id="@+id/prompt_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_delete_prompt"
        android:padding="4dp"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</LinearLayout>
